# tumor-detection-segmentation

./: .coverage  .env.example  .gitignore  .gitignore-reference.md  .pre-commit-config.yaml  ADAMW_IMPLEMENTATION_TODO.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DICOM_VIEWER_COMPLETE.md  DOCKER_COMPLETE.md  DOCKER_GUIDE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.simple  GITIGNORE_UPDATE_COMPLETE.md  GIT_SETUP_GUIDE.md  GUI_README.md  GUI_STATUS.md  IMMEDIATE_EXECUTION_PLAN.md  IMPLEMENTATION_COMPLETE.md  LIBRARY_REFACTORING_PLAN.md  MANIFEST.in  MONAI_IMPLEMENTATION_STATUS.md  MONAI_TESTS_COMPLETE.md  Makefile  OPTIMIZER_IMPROVEMENTS.md  PROJECT_CONTINUATION_TODO.md  PYPI_OPTIMIZATION_COMPLETE.md  PYPI_UPDATE_v2.0.1.md  PYTHON_PACKAGE_SUMMARY.md  README.md  README.md.backup  README_GITHUB.md  README_UPDATE_COMPLETE.md  VERIFICATION_STATUS.md  VERIFICATION_SUCCESS.md  cleanup_root_organized.sh  config.json  debug_datalist.py  (+36 more)
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml
config/: README.md
config/docker/: docker-compose.yml
config/organization/: organization_tasks.json
config/recipes/: production_adamw.json  quick_experiment_adamw.json  unetr_adamw_fast.json  unetr_adamw_highaccuracy.json  unetr_adamw_optimized.json  unetr_multimodal.json
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.test-lite  README.md
docs/: COMPLETION_REPORT.md  CRASH_PREVENTION_GUIDE.md  DATA_MANAGEMENT.md  GITIGNORE_DATASET_PROTECTION.md  GIT_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MEDICAL_GUI_DOCUMENTATION.md  OPTIMIZER_GUIDE.md  OPTIMIZER_IMPROVEMENTS_COMPLETE.md  OPTIMIZER_SCHEDULER_GUIDE.md  PRIORITIZED_ACTION_PLAN_UPDATED.md  PROJECT_ORGANIZATION_SUMMARY.md  README.md  README_ENHANCEMENTS.md  README_UPDATE_COMPLETE.md  TESTING_PROGRESS.md  TESTING_VALIDATION_COMPLETE.md  TODO.md
docs/configuration/: SCMP-Software-Configuration-Management-Plan.md
docs/design/: SDD-Software-Design-Document.md
docs/developer/: experiments.md  implementation.md  monai_tests.md  reorganization-todo.md
docs/implementation/: SDLC-Implementation-Guide.md
docs/organization/: CLEANUP_COMPLETE.md  ROOT_CLEANUP_COMPLETE.md  ROOT_CLEANUP_SUMMARY.md
docs/project/: DEPLOYMENT.md  DOCKER_GUIDE.md  README.md
docs/requirements/: SRD-Software-Requirements-Document.md  requirements-traceability-matrix.md
docs/status/: INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  ROOT_CLEANUP_SUMMARY.md
docs/summary/: SDLC-Complete-Implementation-Summary.md
docs/testing/: STP-Software-Test-Plan.md
docs/traceability/: REQUIREMENTS_TRACEABILITY_COMPLETE.md  requirements_mapping.md
docs/user-guide/: medical-gui.md
examples/integration/: integration_examples.py
examples/quickstart/: api_usage.py  basic_detection.py  custom_pipeline.py
frontend/src/: App.tsx
gui/: README.md  app.py  main.py  models.py  workers.py
gui/frontend/: README.md  package-lock.json  package.json
memory-bank/: app-description.md  change-log.md
memory-bank/implementation-plans/: TEMPLATE.md  advanced-loss-functions.md
notebooks/: README.md  qualitative_review_task01.ipynb
reports/: junit.xml
scripts/: README.md  demo_tumor_overlay.py
scripts/clinical/: clinical_integration_suite.py  clinical_operator.py  deployment_guide.py  operator_implementation_summary.py  test_phase2_setup.py
scripts/demo/: demo_complete_workflow.sh  demo_enhanced_workflow.sh  demo_system.py  test_monai_integration.py
scripts/docker/: docker-manager.sh
scripts/monitoring/: monitor_and_launch.py  monitor_training_progress.py  training_status_summary.py
scripts/organization/: cleanup_root_folder.py  mark_completion.py  move_root_files.py  task_manager.py  verify_cleanup.py  verify_task_status.py
scripts/setup/: quick_setup.sh
scripts/tools/: auto_update_tasks.py  execute_immediate_steps.py  implement_remaining_tasks.py  sync_tasks_from_fs.py  verify_implementation.py
scripts/utilities/: start_complete_gui.py  start_gui.py  start_medical_gui.sh  system_status.sh  validate_system.py
scripts/validation/: README.md  test_imports_quick.py  test_system.py  validate_requirements_traceability.py  verify_monai_checklist.py
src/: README.md  __init__.py  data_preprocessing.py  medical_ai_backend.py  medical_imaging_api.py  task_manager.py
src/benchmarking/: __init__.py
src/clinical/: monai_label_app.py
src/evaluation/: README.md  __init__.py
src/fusion/: README.md
src/inference/: README.md  inference.py
src/integrations/: monai_integration.py
src/optimization/: README.md
src/patient_analysis/: README.md
src/reporting/: README.md
src/training/: README.md  hybrid_supervised.py  mae_pretrain.py  semi_supervised.py  train.py  train_enhanced.py  trainer.py
src/tumor_detection/: __init__.py  config.py  integration.py
tests/: README.md  conftest.py  test_sync_helper.py  test_task_manager.py
tools/: README.md  reorganize_phase1.sh  reorganize_phase2.sh  reorganize_phase3.sh  reorganize_phase4.sh  reorganize_project.sh  run_reorganization.sh
(+41 files in other folders)
