[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tumor-detection-segmentation"
dynamic = ["version"]
description = "Production-grade 3-D brain tumour detection & segmentation: UNETR, MedNext, VISTA3D, DiNTS NAS, semi-supervised, and clinical DICOM/FHIR outputs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "hkevin01", email = "hkevin01@users.noreply.github.com" }]
keywords = [
    "medical-imaging",
    "brain-tumor",
    "segmentation",
    "unetr",
    "mednext",
    "vista3d",
    "dints",
    "nas",
    "monai",
    "pytorch",
    "brats",
    "dicom",
    "fhir",
    "clinical-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "monai>=1.5.0",
    "nibabel>=4.0.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "scikit-image>=0.19.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
    "pillow>=9.0.0",
    "SimpleITK>=2.2.0",
]

[project.optional-dependencies]
clinical = [
    "monailabel>=0.8.0",
    "pynetdicom>=2.0.0",
    "highdicom>=0.22.0",
    "pydicom>=2.4.3",
    "fhir.resources>=7.0.2",
    "reportlab>=4.0.4",
    "python-docx>=0.8.11",
    "jinja2>=3.1.2",
    "cryptography>=41.0.4",
    "pyjwt>=2.8.0",
    "sqlalchemy>=2.0.21",
]
gui = [
    "PyQt6>=6.6.0",
    "matplotlib>=3.7.0",
    "reportlab>=4.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.1",
    "pre-commit>=3.3.0",
    "matplotlib>=3.7.0",
]
all = ["tumor-detection-segmentation[clinical,gui,dev]"]

[project.urls]
Homepage = "https://github.com/hkevin01/tumor-detection-segmentation"
Documentation = "https://github.com/hkevin01/tumor-detection-segmentation/docs"
Repository = "https://github.com/hkevin01/tumor-detection-segmentation.git"
Issues = "https://github.com/hkevin01/tumor-detection-segmentation/issues"

[project.scripts]
tumor-detect-train = "tumor_detection.cli.train:main"
tumor-detect-infer = "tumor_detection.cli.infer:main"
tumor-detect-gui   = "gui.main:main"

[tool.hatch.version]
path = "src/tumor_detection/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tumor_detection"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".git",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "logs/",
    "memory-bank/",
    "recovery/",
    "reports/",
    "validation_reports/",
    "frontend/",
    "gui/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "cpu: marks tests to run on CPU only (for CI/CD environments without GPU)",
    "gpu: marks tests that require GPU acceleration",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
    "preprocessing: marks tests for data preprocessing",
    "inference: marks tests for model inference",
    "api: marks tests for REST API endpoints",
    "frontend: marks tests for frontend components",
    "performance: marks tests for performance testing",
    "timeout: marks tests with timeout limits",
]
addopts = ["--verbose", "--tb=short", "--strict-markers", "--disable-warnings"]
filterwarnings = [
    "ignore::DeprecationWarning:.*SwigPy.*",
    "ignore::DeprecationWarning:.*has no __module__ attribute*",
    "ignore::DeprecationWarning:.*builtin type SwigPyPacked*",
    "ignore::DeprecationWarning:.*builtin type SwigPyObject*",
    "ignore::DeprecationWarning:.*builtin type swigvarlink*",
    "ignore::UserWarning:.*torch.*",
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning:.*numpy.*",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811", "F401"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
exclude = ["tests/", "scripts/", "examples/"]
